[package]
name = "chinese-lunisolar-calendar"
version = "0.1.24"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/chinese-lunisolar-calendar"
homepage = "https://magiclen.org/chinese-lunisolar-calendar"
keywords = ["chinese", "calendar", "lunar", "leap", "solar"]
categories = ["localization", "date-and-time"]
description = "The traditional Chinese Calendar, called 農曆 or 陰曆 in Chinese, is based on the moon, so it's also known as Lunar Calendar."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
chrono = "0.4.6"
once_cell = "1"
chinese-variant = "1.0.1"

[dev-dependencies]
assert_approx_eq = "1.1"

[features]
default = ["ba-zi-weight"]

ba-zi-weight = []