[package]
name = "chinese-lunisolar-calendar"
version = "0.2.4"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.89"
repository = "https://github.com/magiclen/chinese-lunisolar-calendar"
homepage = "https://magiclen.org/chinese-lunisolar-calendar"
keywords = ["chinese", "calendar", "lunar", "leap", "solar"]
categories = ["no-std", "localization", "date-and-time"]
description = "The traditional Chinese Calendar, known as 農曆 or 陰曆 in Chinese, is based on the moon, and is commonly referred to as the Lunar Calendar."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
chrono = { version = "0.4.32", default-features = false }
year-helper = "0.2"

chinese-variant = "1"

enum-ordinalize = { version = "4.4", default-features = false, features = ["derive", "traits"] }

[features]
default = ["std"]

std = ["chrono/std", "chrono/now"]

ba-zi-weight = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
